# phoenix

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FIX_PROGRESS.md  LICENSE  NEXT_TASKS.md  PHASE1-PROGRESS-REPORT.md  PHASE2-RENDER-SUMMARY.md  PHASE3-ANIMATION-COMPLETE.md  PHASE4-CROSS-PLATFORM-COMPLETE.md  PROJECT-LAUNCH.md  README.md  REVIEW_TASKS.md  TEAM-ORGANIZATION.md  build-wasm-simple.sh  build-wasm.sh  build_web.cmake  demo-complete.html  demo-engine-based.html  demo-professional.html  demo-simple.html  deploy-demo.sh  nginx-demo.conf  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-sanitizer.yml  docs.yml  release.yml
architecture/phoenix-engine/: CMakeLists.txt  README.md
architecture/phoenix-engine/docs/: API-DESIGN.md  CODING-STANDARDS.md
architecture/phoenix-engine/rust-security-core/: Cargo.toml
architecture/phoenix-engine/rust-security-core/src/: lib.rs
assets/shaders/: base_fragment.glsl  base_vertex.glsl  debug_line.glsl  ibl_brdf_lut.glsl  ibl_brdf_vertex.glsl  ibl_cubemap_vertex.glsl  ibl_equirectangular_to_cubemap.glsl  ibl_irradiance_convolution.glsl  ibl_prefilter_convolution.glsl  pbr_fragment.glsl  pbr_vertex.glsl  skybox_fragment.glsl  skybox_vertex.glsl
benchmarks/: render_benchmark.cpp  resource_loading.cpp
benchmarks/scene/: benchmark_animation.cpp  benchmark_scene.cpp
build_wasm/: phoenix-engine.wasm
demo-showcase/: DEBUG-GUIDE.md  DEPLOYMENT.md  FIX-PROGRESS-ITERATION5.md  FIX-SUMMARY.md  ITERATION5-SUMMARY.md  ITERATION7-POSTPROCESS-COMPLETE.md  PUBLIC-ACCESS.md  README.md  REFACTOR-PLAN.md  VERIFICATION-REPORT.md  build-demo.sh  build.sh  demo-app.cpp  demo-scene.glb  demo-wasm-fixed.js  demo-wasm.js  index.html  phoenix-engine.js  phoenix-server.py  sw.js  verify-fix.sh
demo-showcase/styles/: mobile.css
demo-website/: README.md  demo-template.html  demos.json  deploy.sh  index-fixed.html  index-v2.html  index.html  nginx.conf
demo-website/archive/: demo-center.html  demo-wasm-final.html
demo-website/css/: responsive.css  showcase.css
demo-website/js/: player.js  showcase.js
docs/: AI-COLLABORATION-GUIDE.md  CLEANUP_SUMMARY.md  DEMO-DIAGNOSIS-REPORT.md  DEMO-FINAL-FIX.md  FINAL-SUMMARY.md  GLTF_LOADER_PROGRESS.md  PHASE1-COMPLETE-SUMMARY.md  PHASE4-CROSS-PLATFORM-BUILD.md  PHASE5-COMPLETE.md  README.md  RENDER-MODULE.md
docs/archive/: CODE_REVIEW_REPORT.md  IMPLEMENTATION_SUMMARY.md
docs/examples/: README.md
docs/manual/: building.md  deployment.md  installation.md  quickstart.md
docs/mobile/: PERFORMANCE-OPTIMIZATION-GUIDE.md  POWER-CONSUMPTION-TEST-REPORT.md  README.md
docs/reports/: ITERATION8_SUMMARY.md  iteration6_pbr_ibl.md  iteration8_advanced_effects.md
docs/site/: index.md  package.json
docs/technical/: architecture.md  faq-troubleshooting.md  performance-guide.md  security-best-practices.md
docs/video-scripts/: demo-outline.md  recording-script.md
examples/animation-demo/: main.cpp
examples/basic-render/: main.cpp
examples/cross-platform-demo/: main.cpp  shell.html
examples/model-viewer/: main.cpp
examples/pbr-demo/: main.cpp
final-tests/: PHASE6-COMPLETE-SUMMARY.md  README.md  run_all_tests.sh
final-tests/compatibility/: README.md
final-tests/performance/: CMakeLists.txt  README.md  benchmark_fps.cpp  benchmark_memory.cpp
final-tests/unit/: CMakeLists.txt  README.md  test_math_unit.cpp  test_render_unit.cpp  test_resource_unit.cpp  test_security_unit.cpp
formal-verification/: README.md  VERIFICATION_REPORT.md
release/: CHECKLIST.md  PHASE6-SUMMARY.md  RELEASE_NOTES.md
reviews/: ARCHITECTURE_ASSESSMENT.md  CODE_REVIEW_FULL.md  DEMO_VALIDATION_REPORT.md  DOCUMENTATION_REPORT.md  FINAL_SUMMARY.md  FIX_PROGRESS.md  FIX_REVIEW_AUDIT.md  ITERATION1_AUDIT_RESULT.md  ITERATION1_FIX_REPORT.md  ITERATION2_AUDIT_RESULT.md  ITERATION4_AUDIT_RESULT.md  ITERATION4_FINAL_VERIFICATION.md  ITERATION5_AUDIT_RESULT.md  ITERATION6_AUDIT_RESULT.md  ITERATION7_AUDIT_RESULT.md  ITERATION8_AUDIT_RESULT.md  ITERATION_PLAN.md  ITERATION_STATUS.md  TEST_REPORT_FULL.md  fix-execution-plan.md
rust-security-core/: Cargo.toml
rust-security-core/examples/: cpp_example.cpp
rust-security-core/include/: security_core.h
rust-security-core/src/: ffi.rs  lib.rs
scripts/: asan_test.sh  cleanup-and-organize.sh
security-audit/: COMPLIANCE_CERTIFICATE.md  README.md  SECURITY_AUDIT_REPORT.md
security-audit/fuzz/: Cargo.toml
security-audit/fuzz/fuzz_targets/: audit_logger_fuzzer.rs  crypto_decrypt_fuzzer.rs  crypto_encrypt_fuzzer.rs  ffi_decrypt_fuzzer.rs
shaders/: basic.frag  basic.vert  pbr_main.sh  postprocess_stack.sh  shadow_csm.sh
src/core/: Logger.cpp  (+2 more)
src/platform/: CMakeLists.txt
src/platform/common/: platform_common.cpp
src/platform/webgpu/: webgl_fallback.cpp  webgpu_device.cpp
src/scene/: CMakeLists.txt  animator.cpp  bvh.cpp  ecs.cpp  gltf_loader.cpp  lod.cpp  morph_animation.cpp  octree.cpp  particle_system.cpp  physics.cpp  scene.cpp  scene_node.cpp  scene_serializer.cpp  skeleton.cpp
tests/: CMakeLists.txt  coverage.sh  test_main.cpp  test_math.cpp  test_security.cpp
tests/.github/workflows/: ci.yml
tests/render/: test_integration.cpp  test_pbr.cpp  test_postprocess.cpp  test_render_device.cpp  test_shadows.cpp
tests/resource/: test_gltf_loader.cpp  test_resource_loaders.cpp
tests/scene/: test_animation.cpp  test_ecs.cpp  test_lod.cpp  test_particle_system.cpp  test_physics.cpp  test_scene_graph.cpp  test_spatial.cpp
tests/scenes/: test_ibl.md
wasm/: CMakeLists.txt  PHASE4-COMPLETE.md  README.md  package.json
wasm/cmake/: Emscripten.cmake
wasm/docs/: BROWSER_COMPATIBILITY.md  PERFORMANCE_BENCHMARKS.md
wasm/examples/html/: index.html
wasm/examples/react/: PhoenixEngine.tsx
wasm/examples/vue/: PhoenixEngine.vue
wasm/include/phoenix/wasm/: types.hpp
wasm/js/: phoenix-wasm-api.js  phoenix-wasm-types.ts
wasm/scripts/: build.sh
wasm/src/: wasm_bindings.cpp  wasm_webgl.cpp  wasm_webgpu.cpp
wasm/tests/: test_wasm_bindings.cpp
(+201 files in other folders)
